[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/esc_menu/esc_menu.gd" type="Script" id=1]

[node name="esc_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.254902, 0.294118, 0.596078, 0.427451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -38.0
margin_right = 151.0
margin_bottom = 95.0

[node name="ColorRect" type="ColorRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.254902, 0.294118, 0.596078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paused_label" type="Label" parent="Panel/menu"]
margin_right = 302.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 30 )
text = "
Paused
"
align = 1

[node name="continue_button" type="Button" parent="Panel/menu"]
margin_top = 52.0
margin_right = 302.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 30 )
text = "Continue"

[node name="exit_button" type="Button" parent="Panel/menu"]
pause_mode = 2
margin_top = 86.0
margin_right = 302.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 30 )
text = "Exit (Saving is not supported)"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/menu/continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Panel/menu/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="visibility_changed" from="Panel/menu/exit_button" to="." method="_on_exit_button_visibility_changed"]
